# RP_rover_global_loc

./: .gitignore  README.md  frames_2025-06-16_12.21.59.gv  venv_script.sh
.devcontainer/: Dockerfile  devcontainer.json
ROS_ws/: rock_analysis.csv  rock_analysis_test.csv
ROS_ws/rosbag2_2025_06_15-18_59_05/: metadata.yaml
ROS_ws/rosbag2_2026_03_10-11_38_47/: metadata.yaml
ROS_ws/src/: note
ROS_ws/yolo_predictions/: predictions.json
data/star_pipeline_output/: R_est.npy  R_true.npy  catalog.csv  observed_vectors.csv
results/: plotjuggler.xml
rosbag2_2026_03_15-15_52_32/: metadata.yaml
src/: bad_results.txt  click_cv.py  control_results.txt  cv_testing.py  main.py  matching.py  ransac_ex.py  sim_results.txt  straight_results.txt  utils.py  world_analyzer.py  zed2.xacro
src/evaluation/: README.md  compute_timing.py  eval_double.py  eval_global_loc.py  eval_relocalization.py  eval_slam.py  eval_slam_ldm.py  eval_stereo.py  evaluate_csv.py  extract_bag.py  extract_bag_ldm.py  generate_thesis_table.py  identifier_complexity.py  matcher_analysis.py  period_comparison.py  plot_trajectory.py  run_all.py  run_all_2.py  te.py  test.txt
src/hirise_data/: above_pred.py  above_rock_analysis.csv  hirise_download.py  hirise_slicer.py  images_split.py  parser.py  predictor.py  readjust_map.py  rock_analysis_test.csv  test.json  training.py  uploader.py
src/output/: catalog.csv
src/pyramid_star_id/: README.md  __init__.py  catalog.py  geometry.py  hash.py  (+7 more)
src/slam_matcher/: CMakeLists.txt  package.xml  setup.py
src/slam_matcher/slam_matcher/: bev_mapper_node.py
(+83 files in other folders)
